<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.boomer.omer.lastminuterager.activities.Activity_SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:id="@+id/editText_username"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_passwordFirst"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_passwordSecond"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_repeat_password" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_show_terms"
                    android:id="@+id/button_showTerms" />

                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/string_accept_terms"
                    android:id="@+id/checkBox_acceptTerms"
                    android:checked="false" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_signup"
                android:id="@+id/button_signup"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_cancel"
                android:id="@+id/button_cancel"
                android:layout_gravity="center_horizontal" />


            </LinearLayout>
    </ScrollView>



</LinearLayout>
