<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.boomer.omer.lastminuterager.activities.Activity_LogIn"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:id="@+id/imageView_intro"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/lmr" />

            <EditText
                android:layout_width="200dp"

                android:layout_height="wrap_content"
                android:id="@+id/editText_username"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_username" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_password"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_password" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_login"
                android:id="@+id/button_login"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_signup"
                android:id="@+id/button_signup"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/string_login_with"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.04"
                android:weightSum="1">


            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_login_with_facebook"
                android:id="@+id/button_facebook"
                android:layout_gravity="center_horizontal"
                android:background="#ff3351c5"
                android:textColor="#ffffffff"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_login_with_twitter"
                android:id="@+id/button_twitter"
                android:layout_gravity="center_horizontal"
                android:background="#ff00cdf5"
                android:textColor="#ffffffff"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />







            </LinearLayout>
    </ScrollView>


</LinearLayout>
