<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.boomer.omer.lastminuterager.fragments.Fragment_UserProfile"
    android:weightSum="1">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sync"
        android:id="@+id/button_sync"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_notifications"
        android:gravity="center"
        android:id="@+id/textView2" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_notifications"
        android:layout_weight="1.00" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_sell_ticket"
        android:id="@+id/button_sell"
        android:layout_weight="0.00"
        />
</LinearLayout>
